--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
     <groupId>io.nqa</groupId>
     <artifactId>Commons</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
+
+    <name>NQA Commons</name>
     <description>Collection of classes used in multiple projects developed by NQA</description>
+    <url>https://nqa.io</url>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
