--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.nqa</groupId>
-    <artifactId>Commons</artifactId>
-    <version>1.1</version>
+    <artifactId>commons</artifactId>
+    <version>1.1.1</version>
     <packaging>jar</packaging>
 
     <name>NQA Commons</name>
