--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,19 @@
 
     <groupId>io.nqa</groupId>
     <artifactId>commons</artifactId>
-    <version>1.3.2</version>
+    <version>1.4</version>
     <packaging>jar</packaging>
 
     <name>NQA Commons</name>
     <description>Collection of classes used in multiple projects developed by NQA</description>
     <url>https://nqa.io</url>
+
+    <developers>
+        <developer>
+            <name>Kristjan Männimets</name>
+            <email>kristjan@nqa.io</email>
+        </developer>
+    </developers>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -23,7 +30,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.26</version>
+            <version>1.18.30</version>
         </dependency>
     </dependencies>
 
